Fixed layout issues

--- a/mod2_sol/css/style.css
+++ b/mod2_sol/css/style.css
@@ -1,48 +1,106 @@
 * {
     box-sizing: border-box;
-    margin:10px;
-
    
 }
 
-div {
-    position: relative;
-    background-color: gray;
+      
+
+
+h1{
+    text-align: center;
     
-    margin-left: 25px;
-    margin-right:15px;
-    margin-top: 15px;
-    margin-bottom: 20px;
-  
 }
 
-p {
-    width: 90%;
-    height: 100px;
-    margin-right: auto;
-    margin-left: auto;
-    font-family: Helvetica;
+body {
+    background-color: skyblue;
+}
 
+
+#chicken {
+
+    border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: Georgia,sans-serif;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color: pink;
+}
+
+#snacks {
+
+    background-color: rgb(38, 152, 245);
+    text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: Georgia,sans-serif;
+	font-weight: bold;
+    font-size: 125%;
+    padding:10px
+}
+
+#food {
+
+    border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: Georgia,sans-serif;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+    background-color: green;
+}
+p {
+    
+    padding: 0px;;
+    margin: 0px;
+  
   }
 
+.row {
+    width:100%;
+}
+
+.container {
+	border: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+}
 h4 {
     text-align: end;
     
 }
 
+section {
+	border:	1px solid black;
+	background-color: #00FF99;
+	width: 100%;
+	height: 200px;
+	font-family: Helvetica;
+	color: black;
+	position: relative;
+	overflow: auto;
+}
 
 @media (min-width: 992px) {
-     .col-lg-4 {
-     
+     .col-lg-4 {   
     float: left;
-      border: 1px solid green;
-      
  
     }
 
    
     .col-lg-4 {
-      width: 27%;
+      width: 33%;
     }
     
 }
@@ -51,23 +109,28 @@ h4 {
  @media (min-width: 768px) and (max-width: 991px){
       .col-tab-6 {
           float: left;
-          border: 1px solid black;
+
       }
 
       .col-tab-6 {
-        width: 45%;
+        width: 50%;
       }
+
+      #f1 {
+        width:90%;
+      }
+
    
   }
 
-  @media (max-width: 767px){
-    .col-low-6 {
+  @media (max-width: 767px) {
+    .col-low-12 {
         float: left;
-        border: 1px solid black;
+        
     }
 
-    .col-low-6 {
-      width: 96%;
+    .col-low-12 {
+      width: 100%;
     }
  
 }
